# Sonic-Nav

./: .gitattributes  .gitignore  README.md
g1_ros2_nav/: package.xml  setup.py
g1_ros2_nav/config/: nav2_params.yaml
g1_ros2_nav/g1_ros2_nav/: cmd_vel_bridge.py  g1_bridge.py  lidar_sim.py  sensor_bridge.py  standalone_bridge.py
g1_ros2_nav/launch/: bringup.launch.py
g1_ros2_nav/rviz/: nav.rviz
g1_ros2_nav/scripts/: run_bridge.py  sensor_bridge.py
gear_sonic/data/robot_model/model_data/g1/: g1_29dof_with_hand.xml  scene_43dof.xml
gear_sonic/data/robots/g1/: g1_29dof_old.xml  scene_29dof_mujoco.xml
gear_sonic/utils/mujoco_sim/: base_sim.py  unitree_sdk2py_bridge.py
gear_sonic/utils/mujoco_sim/wbc_configs/: g1_29dof_sonic_model12.yaml  g1_dynamic.yaml
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/include/input_interface/: ros2_input_handler.hpp
scripts/: all_in_one.py  bringup_sim.sh  camera_pub.py  deploy_proxy.py  dynamic_obs.py  goal_follower.py  keyboard_control.py  launch.py  launch_keyboard.py  launch_nav.py  llm_bridge.py  mid360_pub.py  mppi_nav.py  pico_sim.py  run_all.py  rviz.sh  sensor_pub.py  start.py  start_dynamic.py  start_mppi.py  switch_scene.sh  vel_to_key.py
