<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_ros2_nav</name>
  <version>0.0.1</version>
  <description>ROS2 navigation bridge for GR00T Whole-Body Control humanoid robot (Unitree G1).</description>
  <maintainer email="user@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>python3-numpy</depend>
  <depend>python3-msgpack</depend>
  <depend>python3-zmq</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
